2002-03-31  Koichi INOUE  <inoue@argv.org>

	* emacspeak-w3m.el: Voice locking also works on BEP.

2002-03-31  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* emacspeak-w3m.el: remove mapping font faces to personalities.

2002-03-31  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* emacspeak-w3m.el: synch up original emacspeak.
	mapping font faces to personalities.

2002-03-30  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* emacspeak-w3m.el: synch Up original emacspeak.

2002-03-28  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* emacspeak-mew.el: fixed scan finish Auditory-icons,
		Advice	"mew-scan-sentinel" to "mew-scan-sentinel-hook" adding hook and
remove a	dvice.

2002-03-11  Koichi INOUE  <inoue@argv.org>

	* emacspeak-advice.el: delete-backward-char now speaks Japanese
	chars correctly.

2002-03-07  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* emacspeak-wl.el: add on Package For Old BEP.
	* bep-setup.el,  devel/difs.lst, devel/rmdiffs.lst: fixed.
	

2002-03-05  Koichi INOUE  <inoue@argv.org>

	* emacspeak-m17n-setup:
	emacspeak-m17n-put-language-string-internal: now work on strings
	some part of them has no property and other part has property.
	* emacspeak-m17n-setup: -region and -internal clears
	window-scroll-functions and window-size-change-functions, in
	addition to before-change-functions, after-change-functions.

2002-03-04  Mitsugu SAKAMOTO  <mitsugu@argv.org>

	* emacspeak-w3m.el: Synch with Old BEP.
	marged Advice command on Old Emacspeak-w3m.el.

2002-02-23  Koichi INOUE  <inoue@argv.org>

	* emacspeak-m17n-setup.el, bep-setup.el:
	C-e x m r: new command emacspeak-m17n-set-rate-offset.
	This command asks language name(ja, en) and offset(like -80).
	Then calls emacspeak-m17n-sync-rate-offset to send the parameter
	to Speech server.

2002-02-18  Koichi INOUE  <inoue@argv.org>

	* emacspeak-m17n-ja.el: New structure of
	emacspeak-m17n-ja-strategy-alist . Each entry has three element
	name, strategy for buffer content, strategy for other things like
	messages.
