@@ -1,3 +1,9 @@
+2002-04-01  Koichi INOUE  <inoue@argv.org>
+
+	* emacspeak-advice.el(advice for toggle-input-method): See
+	current-input-method to determine input-method is activated or
+	deactivated. Works on emacs-21.2.
+
 2002-03-31  Koichi INOUE  <inoue@argv.org>
 
 	* emacspeak-w3m.el: Voice locking also works on BEP.
